[package]
name = "iced_table"
version = "0.2.0"
edition = "2021"
authors = ["tarkah <admin@tarkah.dev>"]
description = "A table widget for Iced"
license = "MIT"
repository = "https://github.com/tarkah/iced_table"

[workspace]
default-members = [
  "./example"
]
members = [
  ".",
  "./example",
]

[dependencies]
iced_core = "0.12"
iced_style = "0.12"
iced_widget = "0.12"

[patch.crates-io]
iced = { git = "https://github.com/iced-rs/iced.git", rev = "891f29eea0cb32f0bee49fbace1757b82e1937f3" }
iced_core = { git = "https://github.com/iced-rs/iced.git", rev = "891f29eea0cb32f0bee49fbace1757b82e1937f3" }
iced_style = { git = "https://github.com/iced-rs/iced.git", rev = "891f29eea0cb32f0bee49fbace1757b82e1937f3" }
iced_widget = { git = "https://github.com/iced-rs/iced.git", rev = "891f29eea0cb32f0bee49fbace1757b82e1937f3" }
