[package]
name = "iced_table"
version = "0.12.0"
edition = "2021"
authors = ["tarkah <admin@tarkah.dev>"]
description = "A table widget for Iced"
license = "MIT"
repository = "https://github.com/tarkah/iced_table"

[workspace]
default-members = [
  "./example"
]
members = [
  ".",
  "./example",
]

[dependencies]
iced_core = "0.12"
iced_style = "0.12"
iced_widget = "0.12"
